--- a/home/m3/guide/information.html
+++ b/home/m3/guide/information.html
@@ -84,25 +84,30 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<section>
 				<h1 class="headLine01">お知らせ</h1>
 
-			
-				<p id="a01" class="headLine03">【アイテム価格改定のお知らせ】</p>
+				<p id="a01" class="headLine03">【ホームページ一時使用不能、<br>復旧のお知らせ】</p>
 				<ul class="textUl">
 					<li>
-						<p>10月4日(水)より下記のブランドのアイテムが価格改定となります。<br>
-							「TRUSS」<br>
-							改定前に御見積りいただいた場合でも、ご注文確定が10月4日(水)以降になりますと改定後の価格となりますのでご注意くださいませ。<br>
-							※リピート注文の場合も改定後は改定価格でのご提供となりますのでご了承ください。
+						<p>いつもタカハマライフアートをご利用頂き、誠にありがとうございます。<br> この度は、弊社のホームページが一時使用不能になってしまい、
+							<br> ご利用の皆様に多大なご迷惑をおかけしましたこと、深くお詫び申し上げます。
+							<br> 誠に申し訳ございませんでした。
+							<br> この現象はサーバー機器不良が原因でしたが、本日の午前４時頃復旧致しましたのでご安心ください。
+							<br>
+							<br> つきましては、大変恐縮ではございますが、
+							<br> サーバーが不安定となった時間帯に、お申し込みやお問い合わせをされたお客様で
+							<br> 弊社からのご連絡が未だない場合、ご連絡をいただけますと幸いでございます。
+							<br> お客様には大変お手数をお掛けしますが、何卒宜しくお願い申し上げます。
+							<br>
+							<br> 今後はこのようなことがないよう万全の策を講じてまいりますので、
+							<br> 今後とも変わらぬお引き立てを賜りますようお願い申し上げます。
 						</p>
 					</li>
 				</ul>
-				
 				<p id="a01" class="headLine03">【アイテム価格改定のお知らせ】</p>
 				<ul class="textUl">
 					<li>
-						<p>9月13日(水)より下記のブランドのアイテムが価格改定となります。<br>
-							「Printstar」<br>
-							改定前に御見積りいただいた場合でも、ご注文確定が9月13日(水)以降になりますと改定後の価格となりますのでご注意くださいませ。<br>
-							※リピート注文の場合も改定後は改定価格でのご提供となりますのでご了承ください。
+						<p>9月13日(水)より下記のブランドのアイテムが価格改定となります。<br> 「Printstar」
+							<br> 改定前に御見積りいただいた場合でも、ご注文確定が9月13日(水)以降になりますと改定後の価格となりますのでご注意くださいませ。
+							<br> ※リピート注文の場合も改定後は改定価格でのご提供となりますのでご了承ください。
 						</p>
 					</li>
 				</ul>
