--- a/home/m3/sameday/index.html
+++ b/home/m3/sameday/index.html
@@ -9,7 +9,7 @@ $iteminfo = new ItemInfo();
 
 // print position
 $pos1 = $iteminfo->getPrintPosition(1);
-$pos2 = $iteminfo->getPrintPosition(29);
+$pos2 = $iteminfo->getPrintPosition(29, 1);
 ?>
 <!DOCTYPE html>
 <html lang="ja">
