--- a/home/contact/request.html
+++ b/home/contact/request.html
@@ -32,7 +32,7 @@ $_SESSION['ticket'] = $ticket;
 		<meta property="og:url" content="http://www.takahama428.com/" />
 		<meta property="og:site_name" content="オリジナルTシャツ屋｜タカハマライフアート" />
 		<meta property="og:image" content="http://www.takahama428.com/common/img/header/Facebook_main.png" />
-		<meta property="fb:app_id" content="1605142019732010" />-->
+		<meta property="fb:app_id" content="1605142019732010" />
 	</head>
 
 	<body>
@@ -81,8 +81,7 @@ $_SESSION['ticket'] = $ticket;
 				</p>
 				<h3 class="heading3">資料の内容</h3>
 				<ul class="msg">
-					<li>注文カタログ（注文書、FAX用注文シート付き）※返却不要</li>
-					<li>メーカーの商品小冊子 ※返却不要</li>
+					<li>メーカーカタログ ※返却不要</li>
 					<li>商品サンプル3点まで（ご希望のお客様のみ）<span class="fontred">※必ず到着後10日以内に返却</span></li>
 				</ul>
 				<p class="note"><span>※</span> 商品サンプルをご希望の場合は、フォーム内の「サンプル」でチェックをしてください。
