お知らせ　コメントアウト

--- a/home/index.html
+++ b/home/index.html
@@ -282,7 +282,7 @@
 							<div class="main_images" style="">
 								<img alt="お客様ブログとユーザーレビュー" src="img/mainimg/banner/main_review_blog_724.png" width="724" height="273">
 								<a href="/userreviews/" onclick="ga('send','event','userreviews','click','main');" class="btn userreview"></a>
-								<a href="/blog/thanks_blog/" onclick="ga('send','event','thanks_blog','click','main');" target="_blank" class="btn thanksblog"></a>
+								<a href="/app/WP/thanks-blog/" onclick="ga('send','event','thanks_blog','click','main');" target="_blank" class="btn thanksblog"></a>
 							</div>
 
 						</div>
@@ -609,7 +609,7 @@
 								<h3 id="blog">お客様の写真ブログ　　<br>(製作実績)</h3>
 								<div class="voice_contents ac">
 									<p><img src="img/cus_blogphoto_main.png" width="375" height="260"></p>
-									<p><a href="/blog/thanks_blog/" onclick="ga('send','event','thanks_blog','click','top');" id="blog_link">ブログをみる</a></p>
+									<p><a href="/app/WP/thanks-blog/" onclick="ga('send','event','thanks_blog','click','top');" id="blog_link">ブログをみる</a></p>
 								</div>
 							</div>
 							<div class="message">
@@ -754,6 +754,7 @@
 					</section>
 
 
+<!--
 					<?php
 					$target = strtotime("2017/09/27");
 					if(time() > $target){
@@ -763,6 +764,7 @@
 							</div>';
 					}
 					?>
+-->
 
 						<div>
 							<section class="customer">
@@ -838,7 +840,7 @@
 									<p class="tx2">無料！デザインテンプレート</p>
 								</li>
 								<li class="blc">
-									<a href="/blog/thanks_blog/"><img src="m3/img/sp_menu_03.png" alt="オリジナルTシャツ お客様ブログ" width="100%"></a>
+									<a href="/app/WP/thanks-blog/"><img src="m3/img/sp_menu_03.png" alt="オリジナルTシャツ お客様ブログ" width="100%"></a>
 								</li>
 								<li class="blc">
 									<a href="/m3/contact/request.html" onclick="ga('send','event','carriage','click','sp-menu');"><img src="m3/img/sp_menu_04.png" alt="オリジナルTシャツ 資料請求" width="100%"></a>
