テンプレート　リンク修正

--- a/home/design/designtemp.html
+++ b/home/design/designtemp.html
@@ -1,6 +1,7 @@
 <?php include $_SERVER['DOCUMENT_ROOT']."/common/inc/pageinit.php"; ?>
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="euc-jp" />
 	<title>無料デザイン素材集 ｜ オリジナルTシャツ作成が早い、タカハマライフアート</title>
@@ -11,130 +12,185 @@
 	<link rel="stylesheet" type="text/css" href="/common/css/common.css" media="all" />
 	<link rel="stylesheet" type="text/css" href="/common/css/base.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="./css/designtemp.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="./css/design_menu.css" media="screen" />
+	<link rel="stylesheet" type="text/css" href="./css/design_menu.css" media="screen" />
 	<script type="text/javascript" src="/common/js/jquery.js"></script>
 	<script type="text/javascript" src="/common/js/tlalib.js"></script>
 	<!-- OGP -->
+
 	<head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb#  website: http://ogp.me/ns/website#">
-	<meta property="og:title" content="世界最速！？オリジナルTシャツを当日仕上げ！！" />
-	<meta property="og:type" content="article" /> 
-	<meta property="og:description" content="業界No. 1短納期でオリジナルTシャツを1枚から作成します。通常でも3日で仕上げます。" />
-	<meta property="og:url" content="http://www.takahama428.com/" />
-	<meta property="og:site_name" content="オリジナルTシャツ屋｜タカハマライフアート" />
-	<meta property="og:image" content="http://www.takahama428.com/common/img/header/Facebook_main.png" />
-	<meta property="fb:app_id" content="1605142019732010" />
-	<!--  -->
-</head>
-<body>
-<!-- Google Tag Manager -->
-<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-T5NQFM"
+		<meta property="og:title" content="世界最速！？オリジナルTシャツを当日仕上げ！！" />
+		<meta property="og:type" content="article" />
+		<meta property="og:description" content="業界No. 1短納期でオリジナルTシャツを1枚から作成します。通常でも3日で仕上げます。" />
+		<meta property="og:url" content="http://www.takahama428.com/" />
+		<meta property="og:site_name" content="オリジナルTシャツ屋｜タカハマライフアート" />
+		<meta property="og:image" content="http://www.takahama428.com/common/img/header/Facebook_main.png" />
+		<meta property="fb:app_id" content="1605142019732010" />
+		<!--  -->
+	</head>
+
+	<body>
+		<!-- Google Tag Manager -->
+		<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-T5NQFM"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-T5NQFM');</script>
-<!-- End Google Tag Manager -->
-	
-	<?php include $_SERVER['DOCUMENT_ROOT']."/common/inc/header.php"; ?>
-	
-	<div id="container">
-			
-		<?php include $_SERVER['DOCUMENT_ROOT']."/common/inc/globalmenu.php"; ?>
-		
-		<?php include $_SERVER['DOCUMENT_ROOT']."/common/inc/sidenavi.php"; ?>
-		
-		<div class="contents">
-			<ul class="pan">
-				<li><a href="/">オリジナルＴシャツ屋ＴＯＰ</a></li>
-				<li><a href="/design/designguide.html">デザインの作り方</a></li>
-				<li>無料デザイン素材</li>
-			</ul>
+		<script>
+			(function(w, d, s, l, i) {
+				w[l] = w[l] || [];
+				w[l].push({
+					'gtm.start': new Date().getTime(),
+					event: 'gtm.js'
+				});
+				var f = d.getElementsByTagName(s)[0],
+					j = d.createElement(s),
+					dl = l != 'dataLayer' ? '&l=' + l : '';
+				j.async = true;
+				j.src =
+					'//www.googletagmanager.com/gtm.js?id=' + i + dl;
+				f.parentNode.insertBefore(j, f);
+			})(window, document, 'script', 'dataLayer', 'GTM-T5NQFM');
 
-        	<div id="design_menu_wrapper">
-            	<ul id="design_menu">
-            		<!--<li><a href="designpost/">写真投稿サービス</a></li>-->
-                	<li><a href="designguide.html">デザインの作り方</a></li>
-                    <li><a href="printing.html">プリント方法の種類</a></li>
-                    <li><a href="gallery.html">デザイン実例</a></li>
-                    <li><p>無料の素材集</p></li>
-                    <li><a href="fontcolor.html" class="lastchild">インクとフォント</a></li>
-                </ul>
-        	</div>
-        	<div class="dotted"></div>
-            
-			<div class="heading1_wrapper">
-				<h1>無料デザイン素材集</h1>
-				<p class="comment">デザインの参考やワンポイントとしてお好みでご使用ください。</p>
-				<p class="sub">Design templates</p>
-			</div>
-			<div class="heading2_wrapper">
-				<h2>デザインテンプレート</h2>
-				<p class="sub" style="padding-bottom:30px;">Design Template</p>
-			</div>
-			<div class="dt_btn"><a href="https://www.takahama428.com/designtemplate/"><img src="img/template/dt_btn.jpg"onclick="ga('send','event’,’designtemplate','click’,’pc');" alt="デザインテンプレート集" width="100%" style="padding-bottom:30px;"></a>
-			</div>
-			
-			<div class="heading2_wrapper">
-				<h2>デザインレイアウト</h2>
-				<p class="sub">Design layout</p>
-			</div>
-			
-			<div class="designgallery">
-				<ul>
-					<li><a href="./layout/text.html"><img src="./img/template/text_btn.jpg" alt="テキストデザイン" width="132" height="132" class="over" /></a></li>
-					<li><a href="./layout/class.html"><img src="./img/template/class_btn.jpg" alt="クラスデザイン" width="132" height="132" class="over" /></a></li>
-					<li><a href="./layout/pop.html"><img src="./img/template/pop_btn.jpg" alt="ポップデザイン" width="132" height="132" class="over" /></a></li>
-					<li><a href="./layout/funny.html"><img src="./img/template/omoshiro_btn.jpg" alt="おもしろデザイン" width="132" height="132" class="over" /></a></li>
-					<li><a href="./layout/event.html"><img src="./img/template/event_btn.jpg" alt="イベントデザイン" width="132" height="132" class="over" /></a></li>
-					<li><a href="./layout/stamp.html"><img src="./img/template/stamp_btn.jpg" alt="スタンプ風デザイン" width="132" height="132" class="over" /></a></li>
-					<li><a href="./layout/misc.html"><img src="./img/template/sonotaDesign_btn.jpg" alt="その他のデザイン" width="132" height="132" class="over" /></a></li>
+		</script>
+		<!-- End Google Tag Manager -->
+
+		<?php include $_SERVER['DOCUMENT_ROOT']."/common/inc/header.php"; ?>
+
+		<div id="container">
+
+			<?php include $_SERVER['DOCUMENT_ROOT']."/common/inc/globalmenu.php"; ?>
+
+			<?php include $_SERVER['DOCUMENT_ROOT']."/common/inc/sidenavi.php"; ?>
+
+			<div class="contents">
+				<ul class="pan">
+					<li><a href="/">オリジナルＴシャツ屋ＴＯＰ</a></li>
+					<li><a href="/design/designguide.html">デザインの作り方</a></li>
+					<li>無料デザイン素材</li>
 				</ul>
+
+				<div id="design_menu_wrapper">
+					<ul id="design_menu">
+						<!--<li><a href="designpost/">写真投稿サービス</a></li>-->
+						<li><a href="designguide.html">デザインの作り方</a></li>
+						<li><a href="printing.html">プリント方法の種類</a></li>
+						<li><a href="gallery.html">デザイン実例</a></li>
+						<li>
+							<p>無料の素材集</p>
+						</li>
+						<li><a href="fontcolor.html" class="lastchild">インクとフォント</a></li>
+					</ul>
+				</div>
+				<div class="dotted"></div>
+
+				<div class="heading1_wrapper">
+					<h1>無料デザイン素材集</h1>
+					<p class="comment">デザインの参考やワンポイントとしてお好みでご使用ください。</p>
+					<p class="sub">Design templates</p>
+				</div>
+				<div class="heading2_wrapper">
+					<h2>デザインテンプレート</h2>
+					<p class="sub" style="padding-bottom:30px;">Design Template</p>
+				</div>
+				<div class="dt_btn">
+					<a href="//www.takahama428.com/app/WP/design-templates/"><img src="img/template/dt_btn.jpg" onclick="ga('send','event’,’designtemplate','click’,’pc');" alt="デザインテンプレート集" width="100%" style="padding-bottom:30px;"></a>
+				</div>
+
+				<div class="heading2_wrapper">
+					<h2>デザインレイアウト</h2>
+					<p class="sub">Design layout</p>
+				</div>
+
+				<div class="designgallery">
+					<ul>
+						<li>
+							<a href="./layout/text.html"><img src="./img/template/text_btn.jpg" alt="テキストデザイン" width="132" height="132" class="over" /></a>
+						</li>
+						<li>
+							<a href="./layout/class.html"><img src="./img/template/class_btn.jpg" alt="クラスデザイン" width="132" height="132" class="over" /></a>
+						</li>
+						<li>
+							<a href="./layout/pop.html"><img src="./img/template/pop_btn.jpg" alt="ポップデザイン" width="132" height="132" class="over" /></a>
+						</li>
+						<li>
+							<a href="./layout/funny.html"><img src="./img/template/omoshiro_btn.jpg" alt="おもしろデザイン" width="132" height="132" class="over" /></a>
+						</li>
+						<li>
+							<a href="./layout/event.html"><img src="./img/template/event_btn.jpg" alt="イベントデザイン" width="132" height="132" class="over" /></a>
+						</li>
+						<li>
+							<a href="./layout/stamp.html"><img src="./img/template/stamp_btn.jpg" alt="スタンプ風デザイン" width="132" height="132" class="over" /></a>
+						</li>
+						<li>
+							<a href="./layout/misc.html"><img src="./img/template/sonotaDesign_btn.jpg" alt="その他のデザイン" width="132" height="132" class="over" /></a>
+						</li>
+					</ul>
+				</div>
+
+				<div class="heading2_wrapper">
+					<h2>デザインパーツ</h2>
+					<p class="sub">Design parts</p>
+				</div>
+
+				<div class="designgallery">
+					<ul>
+						<li>
+							<a href="./parts/star.html"><img src="./img/template/hoshi_btn.jpg" alt="星" width="132" height="132" class="over" /></a>
+						</li>
+						<li>
+							<a href="./parts/heart.html"><img src="./img/template/heart_btn.jpg" alt="ハート" width="132" height="132" class="over" /></a>
+						</li>
+						<li>
+							<a href="./parts/nature.html"><img src="./img/template/sizen_btn.jpg" alt="自然" width="132" height="132" class="over" /></a>
+						</li>
+						<li>
+							<a href="./parts/lip.html"><img src="./img/template/kuchi_btn.jpg" alt="唇・口" width="132" height="132" class="over" /></a>
+						</li>
+						<li>
+							<a href="./parts/sports.html"><img src="./img/template/sports_btn.jpg" alt="スポーツ関係" width="132" height="132" class="over" /></a>
+						</li>
+						<li>
+							<a href="./parts/person.html"><img src="./img/template/jinbutsu_btn.jpg" alt="人物シルエット" width="132" height="132" class="over" /></a>
+						</li>
+						<li>
+							<a href="./parts/animal.html"><img src="./img/template/dobutsu_btn.jpg" alt="動物シルエット" width="132" height="132" class="over" /></a>
+						</li>
+						<li>
+							<a href="./parts/symbol.html"><img src="./img/template/kigou_btn.jpg" alt="記号・マーク" width="132" height="132" class="over" /></a>
+						</li>
+						<li>
+							<a href="./parts/eccentric.html"><img src="./img/template/hen_btn.jpg" alt="へんなの" width="132" height="132" class="over" /></a>
+						</li>
+						<li>
+							<a href="./parts/emotion.html"><img src="./img/template/kaomoji_btn.jpg" alt="顔文字" width="132" height="132" class="over" /></a>
+						</li>
+						<li>
+							<a href="./parts/misc.html"><img src="./img/template/sonota_btn.jpg" alt="その他" width="132" height="132" class="over" /></a>
+						</li>
+					</ul>
+				</div>
+
 			</div>
-				
-			<div class="heading2_wrapper">
-				<h2>デザインパーツ</h2>
-				<p class="sub">Design parts</p>
-			</div>
-			
-			<div class="designgallery">
-				<ul>
-					<li><a href="./parts/star.html"><img src="./img/template/hoshi_btn.jpg" alt="星" width="132" height="132" class="over" /></a></li>
-					<li><a href="./parts/heart.html"><img src="./img/template/heart_btn.jpg" alt="ハート" width="132" height="132" class="over" /></a></li>
-					<li><a href="./parts/nature.html"><img src="./img/template/sizen_btn.jpg" alt="自然" width="132" height="132" class="over" /></a></li>
-					<li><a href="./parts/lip.html"><img src="./img/template/kuchi_btn.jpg" alt="唇・口" width="132" height="132" class="over" /></a></li>
-					<li><a href="./parts/sports.html"><img src="./img/template/sports_btn.jpg" alt="スポーツ関係" width="132" height="132" class="over" /></a></li>
-					<li><a href="./parts/person.html"><img src="./img/template/jinbutsu_btn.jpg" alt="人物シルエット" width="132" height="132" class="over" /></a></li>
-					<li><a href="./parts/animal.html"><img src="./img/template/dobutsu_btn.jpg" alt="動物シルエット" width="132" height="132" class="over" /></a></li>
-					<li><a href="./parts/symbol.html"><img src="./img/template/kigou_btn.jpg" alt="記号・マーク" width="132" height="132" class="over" /></a></li>
-					<li><a href="./parts/eccentric.html"><img src="./img/template/hen_btn.jpg" alt="へんなの" width="132" height="132" class="over" /></a></li>
-					<li><a href="./parts/emotion.html"><img src="./img/template/kaomoji_btn.jpg" alt="顔文字" width="132" height="132" class="over" /></a></li>
-					<li><a href="./parts/misc.html"><img src="./img/template/sonota_btn.jpg" alt="その他" width="132" height="132" class="over" /></a></li>
-				</ul>
-			</div>
-			
+
 		</div>
-		
-	</div>
-	
-    <p class="scroll_top"><a href="#header">無料デザイン素材　ページトップへ</a></p>
 
-	<?php include $_SERVER['DOCUMENT_ROOT']."/common/inc/footer.php"; ?>
-	
+		<p class="scroll_top"><a href="#header">無料デザイン素材　ページトップへ</a></p>
 
-<!--Yahoo!タグマネージャー導入 2014.04 -->
-<script type="text/javascript">
-  (function () {
-    var tagjs = document.createElement("script");
-    var s = document.getElementsByTagName("script")[0];
-    tagjs.async = true;
-    tagjs.src = "//s.yjtag.jp/tag.js#site=bTZi1c8";
-    s.parentNode.insertBefore(tagjs, s);
-  }());
-</script>
-<noscript>
+		<?php include $_SERVER['DOCUMENT_ROOT']."/common/inc/footer.php"; ?>
+
+
+		<!--Yahoo!タグマネージャー導入 2014.04 -->
+		<script type="text/javascript">
+			(function() {
+				var tagjs = document.createElement("script");
+				var s = document.getElementsByTagName("script")[0];
+				tagjs.async = true;
+				tagjs.src = "//s.yjtag.jp/tag.js#site=bTZi1c8";
+				s.parentNode.insertBefore(tagjs, s);
+			}());
+
+		</script>
+		<noscript>
   <iframe src="//b.yjtag.jp/iframe?c=bTZi1c8" width="1" height="1" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
 </noscript>
-	
-</body>
+
+	</body>
+
 </html>
