--- a/home/index.html
+++ b/home/index.html
@@ -268,7 +268,7 @@
 								<a href="/campaign/towel/" onclick="ga('send','event','towel_campaign','click','main');" class="towel_main"></a>
 							</div>
 							<div class="main_images" style="">
-								<a href="/designtemplate/" onclick="ga('send','event','designtemplate','click','main');" class="designtemplate_main"></a>
+								<a href="/app/WP/design-templates/" onclick="ga('send','event','designtemplate','click','main');" class="designtemplate_main"></a>
 							</div>
 
 							<div class="main_images" style="">
