お知らせ告知

--- a/home/index.html
+++ b/home/index.html
@@ -669,6 +669,10 @@
 							<div class="news_wrap">
 								<div class="news_list">
 									<dl class="list">
+										<dt>2017.10.24</dt>
+										<dd><a href="/guide/information_001.html">【ウェブサイト全面リニューアル】</a></dd>
+										<dt>2017.10.24</dt>
+										<dd><a href="/guide/information_001.html">【価格改定のお知らせ】</a></dd>
 										<dt>2017.09.27</dt>
 										<dd><a href="/guide/information_001.html">【ホームページ一時使用不能、復旧のお知らせ】</a></dd>
 										<dt>2017.05.25</dt>
@@ -754,17 +758,17 @@
 					</section>
 
 
-<!--
+
 					<?php
-					$target = strtotime("2017/09/27");
+					$target = strtotime("2017/10/24");
 					if(time() > $target){
 						echo '<div id="notification">
 							<p><a href="m3/guide/information.html"><span class="new">ニュース<br></span>
-<span id="newinfo">【アイテム価格改定のお知らせ】<br>【ホームページ一時使用不能、復旧のお知らせ】</span><span class="newback">詳細<br></span></a></p>
+<span id="newinfo">【ウェブサイト全面リニューアル】<br>【価格改定のお知らせ】</span><span class="newback">詳細<br></span></a></p>
 							</div>';
 					}
 					?>
--->
+
 
 						<div>
 							<section class="customer">
