--- a/home/m3/guide/information.html
+++ b/home/m3/guide/information.html
@@ -84,6 +84,24 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<section>
 				<h1 class="headLine01">お知らせ</h1>
 
+				<p id="a01" class="headLine03">【ウェブサイト全面リニューアル】</p>
+				<ul class="textUl">
+					<li>
+						<p>タカハマライフアートをご利用いただきありがとうございます。
+							<br>2017年11月1日（水）ウェブサイト全面リニューアルを行います。
+							<br>より見やすく、より使いやすいウェブサイトとなるよう、さらに運営を進めて参りますので、何卒よろしくお願いいたします。
+						</p>
+					</li>
+				</ul>
+				<p id="a01" class="headLine03">【価格改定のお知らせ】</p>
+				<ul class="textUl">
+					<li>
+						<p>カッティングシート加工の価格改定を行います。
+						<br> 改定前に御見積りいただいた場合でも、ご注文確定が11月1日(水)以降になりますと改定後の価格となりますのでご注意くださいませ。
+						<br>※リピート注文の場合も改定後は改定価格でのご提供となりますのでご了承ください。
+						</p>
+					</li>
+				</ul>
 				<p id="a01" class="headLine03">【ホームページ一時使用不能、<br>復旧のお知らせ】</p>
 				<ul class="textUl">
 					<li>
