--- a/home/price/fee/index.html
+++ b/home/price/fee/index.html
@@ -63,8 +63,8 @@
 <body>
 	<!-- Google Tag Manager -->
 	<noscript>
-		<iframe src="//www.googletagmanager.com/ns.html?id=GTM-T5NQFM" height="0" width="0" style="display:none;visibility:hidden"></iframe>
-	</noscript>
+            <iframe src="//www.googletagmanager.com/ns.html?id=GTM-T5NQFM" height="0" width="0" style="display:none;visibility:hidden"></iframe>
+        </noscript>
 	<script>
 		(function(w, d, s, l, i) {
 			w[l] = w[l] || [];
@@ -106,8 +106,14 @@
 
 			<div class="heading1_wrapper_new">
 				<h1>プリント料金案内<img src="img/fee_mainrogo.png" alt="プリント料金案内" width="95" height="35"></h1>
+				
 				<p class="comment_t"> 加工料金内容を、わかりやすく説明いたします。下の5種類からお選びください。</p>
-
+				<div class="price_comment">
+				<p style="font-weight:bold; font-size:16px; color: #dc0000;">【カッティング価格改定】<p>
+				<p>カッティングシート加工の価格改定を行います。<br>
+				お求めになりやすい価格になりましたので、ぜひご利用くださいませ。<br>
+					また改定前に御見積りいただいた場合でも、ご注文確定が11月1日(水)以降になりますと改定後の価格となりますのでご注意ください。</p>
+				</div>
 			</div>
 
 			<h2 class="headLine03" id="attn">各プリント・刺繍体系</h2>
@@ -346,7 +352,10 @@
 									</table>
 									<p class="red_com">※1枚につきの値段になります。</p>
 								</div>
+
 							</div>
+
+
 
 							<div class="sozai">
 								<h3 class="big_ttl"><img src="/price/fee/img/icon_sozai.jpg">素材別割り増し金額</h3>
@@ -425,6 +434,7 @@
 								</div>
 							</div>
 
+
 							<div>
 								<p class="comment2">さらにプリントの詳細を知りたい方はこちら</p>
 								<a class="button2 pc" href="/design/printing.html#silk">シルクスクリーンプリント方法を見る
@@ -435,6 +445,7 @@
 						</div>
 					</div>
 				</div>
+
 
 				<div id="fragment-2">
 
@@ -451,6 +462,7 @@
 							<img class="pc" src="/price/fee/img/p_d_case_pc.jpg" width="100%">
 							<img class="sp" src="/price/fee/img/dejiten/p_case_d.jpg" width="100%">
 						</div>
+
 
 						<div class="handai">
 							<h3 class="big_ttl"><img src="/price/fee/img/icon_han.jpg">版代について</h3>
@@ -475,6 +487,8 @@
 							<h4 class="big_txt">アイテムますます割！</h4>
 							<p class="masu">料金が合計できるアイテムがあります！</p>
 							<p class="masu_2"><span class="redmin">※</span>同じデザイン(同じプリント箇所)の場合に限ります。</p>
+
+
 							<div class="lftblc_4">
 								<img src="/price/fee/img/p_total.jpg" width="100%">
 								<p class="print_txt">ご不明な点など詳しくはメール、又はお電話にてお問い合わせ下さいませ。</p>
@@ -483,6 +497,7 @@
 
 							<div class="rgtblc_4_pc">
 								<h4 class="mid_ttl">プリント料金表</h4>
+
 								<table class="prt">
 									<tbody>
 										<tr class="table_1_ttl">
@@ -585,6 +600,7 @@
 							</div>
 						</div>
 
+
 						<div class="sozai">
 							<h3 class="big_ttl"><img src="/price/fee/img/icon_sozai.jpg">素材別割り増し金額</h3>
 							<div class="lftblc_5">
@@ -674,7 +690,9 @@
 					</div>
 				</div>
 
+
 				<div id="fragment-3">
+
 					<img class="pc" src="/price/fee/img/bana/p_main_i_pc.jpg" width="100%">
 					<img class="sp" src="/price/fee/img/bana/p_main_i.jpg" width="100%">
 					<div class="wrap_all">
@@ -1437,11 +1455,15 @@
 											<td>&yen;1,500</td>
 											<td>&yen;900</td>
 										</tr>
+
+
 									</tbody>
 								</table>
 								<p class="red_com">※1枚につきの値段になります。</p>
 							</div>
+
 						</div>
+
 
 						<div class="sozai">
 							<h3 class="big_ttl"><img src="/price/fee/img/icon_sozai.jpg">素材別割り増し金額</h3>
@@ -1519,6 +1541,8 @@
 								</div>
 							</div>
 						</div>
+
+
 						<div>
 							<p class="comment2">さらに刺繍の詳細を知りたい方はこちら</p>
 							<a class="button2" href="/design/emb.html">刺繍ページを見る</a>
@@ -1604,7 +1628,10 @@
 		</div>
 	</div>
 
+
 	<p class="scroll_top"><a href="#header">プリント料金案内　ページトップへ</a></p>
+
+
 
 	<?php include $_SERVER['DOCUMENT_ROOT']."/common/inc/footer.php"; ?>
 
@@ -1619,8 +1646,11 @@
 		</div>
 	</div>
 
+
 	<script type="text/javascript" src="/design/js/ui.core.js"></script>
 	<script type="text/javascript" src="/design/js/ui.tabs.js"></script>
+
+
 
 	<!--Yahoo!タグマネージャー導入 2014.04 -->
 	<script type="text/javascript">
@@ -1636,6 +1666,8 @@
 	<noscript>
 		<iframe src="//b.yjtag.jp/iframe?c=bTZi1c8" width="1" height="1" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
 	</noscript>
+
+
 
 </body>
 
